--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "google-generativeai>=0.8.5",
+    "pdf2image>=1.17.0",
+    "pillow>=12.1.0",
     "pypdf>=6.4.1",
+    "pytesseract>=0.3.13",
 ]
